--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,6 +17,7 @@ p, h1, h2, h3, h4, h5, button, li{
 .card{
   padding: 5px;
   animation: fadeIn 2s; 
+  background-color: rgba(255, 255, 255, .7) !important;
 }
 
 .title{
