--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,7 @@
 @import url('./button.css');
 @import url('./link.css');
 @import url('./accordion.css');
+@import url('./loading.css');
 
 body{
   margin: 0;
