--- a/src/styles/loading.css
+++ b/src/styles/loading.css
@@ -1,18 +1,14 @@
 .loader {
-    width: 45px;
+    width: 50px;
     aspect-ratio: 1;
-    --c: no-repeat linear-gradient(to right, var(--shade2), var(--shade3));
-    background: 
-      var(--c) 0%   50%,
-      var(--c) 50%  50%,
-      var(--c) 100% 50%;
-    background-size: 20% 100%;
-    animation: l1 1s infinite linear;
+    border-radius: 50%;
+    background: var(--shade1);
+    animation: l2 2s infinite;
   }
-  @keyframes l1 {
-    0%  {background-size: 20% 100%,20% 100%,20% 100%}
-    33% {background-size: 20% 10% ,20% 100%,20% 100%}
-    50% {background-size: 20% 100%,20% 10% ,20% 100%}
-    66% {background-size: 20% 100%,20% 100%,20% 10% }
-    100%{background-size: 20% 100%,20% 100%,20% 100%}
+  @keyframes l2 {
+    0%,
+    100%{transform:translate(-35px);box-shadow:  0     0 var(--shade2), 0     0 var(--shade3)}
+    40% {transform:translate( 35px);box-shadow: -15px  0 var(--shade2),-30px  0 var(--shade3)}
+    50% {transform:translate( 35px);box-shadow:  0     0 var(--shade2), 0     0 var(--shade3)}
+    90% {transform:translate(-35px);box-shadow:  15px  0 var(--shade2), 30px  0 var(--shade3)}
   }
