--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,8 @@
 @import url('./link.css');
 @import url('./accordion.css');
 @import url('./loading.css');
+@import url('./tabs.css');
+@import url('./table.css');
 
 body{
   margin: 0;
@@ -65,6 +67,16 @@ p, h1, h2, h3, h4, h5, button, li{
 .projects{
   padding: 10px;
   height: 100%;
+  background: linear-gradient(-125deg, var(--shade3), var(--shade2));
+  color: var(--white);
+}
+
+.cv{
+  display: block;
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
   background: linear-gradient(-125deg, var(--shade3), var(--shade2));
   color: var(--white);
 }
