--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,7 +20,7 @@ p, h1, h2, h3, h4, h5, button, li{
 .card{
   padding: 5px;
   animation: fadeIn 2s; 
-  background-color: rgba(255, 255, 255, .5) !important;
+  background-color: rgba(255, 255, 255, 1) !important;
 }
 
 .title{
